--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,6 @@
         a {
             color: #20a53a
         }
+        .clock{
+            background-image:url('img\58tqia.jpeg')
+        }
