--- a/css/yiyan.css
+++ b/css/yiyan.css
@@ -1,26 +1,30 @@
-        body {
+       body {
             margin: 0;
             padding: 0;
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
         }
-        .main-container{
+
+        .main-content {
             flex: 3;
             display: flex;
             flex-direction: column;
-        } 
-        .container {
+        }
+
+        .sidebar {
+            flex: 1;
+            background-color: #f2f2f2;
+            padding: 20px;
+        }
+
+        .section {
             flex: 1;
             background-color: #e0e0e0;
             margin: 10px;
             padding: 20px;
         }
-        .container1 {
-            flex: 1;
-            background-color: #f2f2f2;
-            padding: 20px; 
-        }
+
         @media (max-width: 768px) {
             body {
                 flex-direction: column;
@@ -30,6 +34,3 @@
                 flex: 1;
             }
         }
-        
-       
-      
