--- a/css/yiyan.css
+++ b/css/yiyan.css
@@ -3,8 +3,8 @@
   }  
     
   #user-input {  
-    width: 300px;  
-    height: 40px;  
+    width: 100%;  
+    height: 100px;  
     padding: 5px;  
     font-size: 16px;  
     border-radius: 5px;  
