--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ a {
             right: 0;
         }
         
-        #startBtn, #addTimeBtn, #restBtn, #stopBtn{
+        #startBtn, #addTimeBtn, #restBtn, #stopBtn,#backBtn{
             padding: 10px 20px;
             font-size: 18px;
             cursor: pointer;
